updated structure for more readability

--- a/ASP_NET_MVC_RequireJS/Views/Home/Index.cshtml
+++ b/ASP_NET_MVC_RequireJS/Views/Home/Index.cshtml
@@ -4,13 +4,13 @@
 
 @section Scripts {
 	<script>
-		require(['Default/Index']);
+		require(['HomeModule']);
 	</script>
 }
 
 <h2>Index Page</h2>
 
-<a href="IndexSecond">Page 2</a>
+<a href="/pageone">Page 1</a>
 <br/>
-<a href="IndexThird">Page 3</a>
+<a href="/pagetwo">Page 2</a>
 
